--- a/style/style.css
+++ b/style/style.css
@@ -37,9 +37,21 @@ ol {
 
 a {
     text-decoration: none;
-    color: white;
+    color: #080505;
 }
 
+#navbarSupportedContent ul li a {
+    color: aliceblue;
+
+}
+
+#navbarSupportedContent ul li a:hover {
+    color: #5168d7;
+}
+
+#carritoC {
+    font-size: 25px;
+}
 
 
 img {
@@ -81,22 +93,13 @@ p {
 
 /* ==================modal inicio=================== */
 
-.modal {
-    background-image: url(../img/autos.jpeg);
-    background-size: cover;
-    display: block;
-}
 
-.modal p {
-    font: 1em sans-serif;
-    text-align: start;
-}
 
 /* ============vitrina virtual=========== */
 
 .tarjeta {
     width: 350px;
-    height: 450px;
+    height: 490px;
     background-color: #5167d72f;
     box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
@@ -112,11 +115,17 @@ p {
     height: 100%;
 }
 
-.tarjeta__btn {
+.vehiculos__btn {
     background-color: rgba(4, 97, 236, 0.123);
     font-size: 2rem;
     border-radius: 15px;
     transform: scale(0.8);
+    height: 100%;
+}
+
+.vehiculos__btn button:hover {
+    background-color: darkslategray;
+    color: aliceblue;
 }
 
 .referencia {
@@ -133,34 +142,15 @@ p {
     display: flex;
     justify-content: center;
     gap: 20px;
-}
+    translate: 0 -80px;
 
-.menuvitrina__menu {
-    display: flex;
-    gap: 30px;
-}
-
-@media (min-width: 768px) {
-    .menuvitrina__menu :hover {
-        background-color: #151f42;
-        color: aliceblue;
-        border-radius: 20px;
-    }
-}
-
-.menuvitrina__menu a {
-    text-decoration: none;
-    padding: 10px;
-    font-size: 30px;
-    color: #152131;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
 }
 
 .menuvitrina__buscar {
     position: absolute;
     padding: 5px;
     translate: 480px;
+
 }
 
 .menuvitrina__buscar input {
@@ -208,45 +198,19 @@ p {
     gap: 20px;
 }
 
-#id-camiones {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-#id-motocicletas {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-#id-taxis {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
 
 @media (min-width: 300px) and (max-width: 1020px) {
     .menuvitrina__buscar {
-        translate: 0 -80px;
+        translate: 0 -20px;
     }
 }
 
-@media (min-width: 300px) and (max-width: 768px) {
-    .menuvitrina__menu {
-        display: grid;
-    }
-}
 
 /* =====================Modal vehiculos===================== */
 
 
 /* Estilos para el modal */
-.modalIndex {
+/* .modalIndex {
     display: none;
     position: fixed;
     top: 0;
@@ -254,9 +218,9 @@ p {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-}
+} */
 
-.modalContenido {
+/* .modalContenido {
     background-color: #fff;
     position: absolute;
     width: 950px;
@@ -268,16 +232,16 @@ p {
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
-}
+} */
 
 /* Estilos para el botón de cerrar */
-.cerrar {
+/* .cerrar {
     position: absolute;
     top: 10px;
     right: 10px;
     font-size: 30px;
     cursor: pointer;
-}
+} */
 
 
 
@@ -288,11 +252,11 @@ p {
     display: grid;
     text-align: center;
     grid-template-columns: 2fr 1fr 1fr;
-    grid-template-areas: 
-    "imgrande imguno imgdos" 
-    "imgrande imgtres imgcuatro" 
-    "descrip descrip descrip"
-    "btnwpp btnwpp btnwpp";
+    grid-template-areas:
+        "imgrande imguno imgdos"
+        "imgrande imgtres imgcuatro"
+        "descrip descrip descrip"
+        "btnwpp btnwpp btnwpp";
     gap: 10px;
 }
 
@@ -324,6 +288,8 @@ p {
 .vehiculos__presentacion__caracteristicas {
     grid-area: descrip;
 }
+
+
 
 /* .modal-body {
     display: none;
