--- a/style/style.css
+++ b/style/style.css
@@ -203,49 +203,16 @@ p {
     }
 }
 
-.vehiculos__presentacion {
-    margin-bottom: 100px;
-    width: 900px;
-    height: 900px;
-    display: grid;
-    text-align: center;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-areas:
-        "imgrande imguno imgdos"
-        "imgrande imgtres imgcuatro"
-        "descrip descrip descrip"
-        "btnwpp btnwpp btnwpp";
-    gap: 10px;
+/* =========indicadores carouser información======== */
+.carousel-control-next-icon {
+    background-image : url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
-.vehiculos__presentacion__imgrande {
-    grid-area: imgrande;
-    object-fit: contain;
+.carousel-control-prev-icon{
+    background-image : url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 
-.vehiculos__presentacion__imguno {
-    grid-area: imguno;
-    object-fit: contain;
-}
 
-.vehiculos__presentacion__imgdos {
-    grid-area: imgdos;
-    object-fit: contain;
-}
-
-.vehiculos__presentacion__imgtres {
-    grid-area: imgtres;
-    object-fit: contain;
-}
-
-.vehiculos__presentacion__imgcuatro {
-    grid-area: imgcuatro;
-    object-fit: contain;
-}
-
-.vehiculos__presentacion__caracteristicas {
-    grid-area: descrip;
-}
 
 
 /* ==========footer========== */
