--- a/style/style.css
+++ b/style/style.css
@@ -201,6 +201,14 @@ p {
     .menuvitrina__buscar {
         translate: 0 -20px;
     }
+
+    .mapafooter{
+        display: none;
+    }
+
+    .modal-body p {
+        font: 1em sans-serif;
+    }
 }
 
 /* =========indicadores carouser información======== */
